# conda-forge-feedstock-ops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_README.md  LICENSE  README.md  entrypoint  environment.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
conda_forge_feedstock_ops/: __init__.py  __main__.py  check_solvable.py  container_utils.py  json.py  lint.py  os_utils.py  parse_package_and_feedstock_names.py  rattler_build.py  rattler_solver.py  rerender.py  settings.py  utils.py  virtual_mounts_host.py  virtual_packages.py
tests/: conftest.py  test_check_solvable.py  test_container_utils.py  test_json.py  test_lint.py  test_parse_package_and_feedstock_names.py  test_rerender.py  test_settings.py  test_solvers.py  test_utils.py  test_virtual_mounts_host.py  test_virtual_packages.py
tests/data/llvmdev-feedstock/recipe/patches/archive/: amd-roc-2.7.0.diff  intel-D47188-svml-VF.patch
tests/data/ngmix-blah/: README.md
tests/data/ngmix-blah/.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml
tests/data/ngmix-blah/.scripts/: run_osx_build.sh
